@@ -2,11 +2,13 @@ package canvas.controller;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import canvas.model.Color;
 import canvas.model.Component;
 import canvas.model.Composite;
 import canvas.model.Point;
+import canvas.view.Adapter;
 
 public class ComponentContainer {
     private Composite resources;
@@ -19,7 +21,8 @@ public class ComponentContainer {
 
     public void add(Component component) {
         resources.add(component);
-        // Need to discuss add component need to be selections?
+
+        selections.ofList(Collections.singletonList(component));
     }
 
     public void select(Point p1, Point p2) {
@@ -27,15 +30,8 @@ public class ComponentContainer {
     }
 
     public void selectOne(Point p1) {
-        selections.ofList(resources.filter(component -> component.contains(p1, p1)).stream().limit(1).toList());
-    }
-
-    public void setFront() {
-        selections.get().forEach(component -> resources.remove(component));
-
-        List<Component> l = selections.get();
-        Collections.reverse(l);
-        l.forEach(component -> resources.addFront(component));
+        selections.ofList(resources.filter(component -> component.contains(p1, p1)).stream().limit(1)
+                .collect(Collectors.toList()));
     }
 
     public void setColor(Color color) {
@@ -48,7 +44,14 @@ public class ComponentContainer {
 
     public void setWidth(Integer width) {
         selections.setWidth(width);
+    }
 
+    public void setText(String text) {
+        selections.setText(text);
+    }
+
+    public void setPath(String path) {
+        selections.setPath(path);
     }
 
     public Color getColor() {
@@ -63,8 +66,20 @@ public class ComponentContainer {
         return selections.getWidth();
     }
 
+    public void setFront() {
+        selections.get().forEach(component -> resources.remove(component));
+
+        List<Component> l = selections.get();
+        Collections.reverse(l);
+        l.forEach(component -> resources.addFront(component));
+    }
+
     public void setBack() {
         selections.get().forEach(component -> resources.remove(component));
         selections.get().forEach(component -> resources.add(component));
+    }
+
+    public void draw(Adapter adapter) {
+        resources.draw(adapter);
     }
 }
